Add model testing with scikit-learn metrics

--- a/notebooks/P-Wave-CNN.ipynb
+++ b/notebooks/P-Wave-CNN.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import torch\n",
     "from torch import nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import numpy as np\n",
+    "import sklearn\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -20,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,17 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 250 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -126,9 +124,9 @@
     "\n",
     "batch_size = 250\n",
     "\n",
-    "train_size = 10000 * 2\n",
+    "train_size = 1 * 10 ** 6\n",
     "train_ratio = 0.7\n",
-    "test_size = 2000\n",
+    "test_size = 1 * 10 ** 5\n",
     "\n",
     "# Load test data\n",
     "train_val_data = mixdata[\"X\"][:train_size]\n",
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,34 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataParallel(\n",
-       "  (module): CNN(\n",
-       "    (conv1): Conv1d(1, 32, kernel_size=(21,), stride=(1,), padding=(10,))\n",
-       "    (conv2): Conv1d(32, 64, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-       "    (conv3): Conv1d(64, 128, kernel_size=(11,), stride=(1,), padding=(5,))\n",
-       "    (batchnorm32): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm64): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm128): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (batchnorm512): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    (fc1): Linear(in_features=4736, out_features=512, bias=True)\n",
-       "    (fc2): Linear(in_features=512, out_features=512, bias=True)\n",
-       "    (fc3): Linear(in_features=512, out_features=2, bias=True)\n",
-       "    (maxpool): MaxPool1d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = parallelize(model)\n",
     "model"
@@ -250,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,34 +237,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Training and Validation"
+    "# 5. Training and Validation\n",
+    "\n",
+    "## TODO -- Save model on validation improvement. Then load model when testing and evaluating. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [    1/   10] | train loss: 0.0908 | validation loss: 7.9447\n",
-      "Epoch [    2/   10] | train loss: 0.0484 | validation loss: 8.9546\n",
-      "Epoch [    3/   10] | train loss: 0.0444 | validation loss: 9.4589\n",
-      "Epoch [    4/   10] | train loss: 0.0340 | validation loss: 10.3227\n",
-      "Epoch [    5/   10] | train loss: 0.0252 | validation loss: 10.9363\n",
-      "Epoch [    6/   10] | train loss: 0.0168 | validation loss: 11.4303\n",
-      "Epoch [    7/   10] | train loss: 0.0145 | validation loss: 12.5076\n",
-      "Epoch [    8/   10] | train loss: 0.0081 | validation loss: 12.8929\n",
-      "Epoch [    9/   10] | train loss: 0.0092 | validation loss: 13.5841\n",
-      "Epoch [   10/   10] | train loss: 0.0087 | validation loss: 14.2655\n",
-      "Wall time: 59.4 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -338,14 +295,28 @@
     "                \n",
     "    # Print epoch summary\n",
     "    t_loss_avg = train_loss / len(trainloader)\n",
-    "    v_loss_avg = val_loss / len(testloader)\n",
+    "    v_loss_avg = val_loss / len(val_loader)\n",
     "    \n",
     "    train_losses.append(t_loss_avg)\n",
     "    val_losses.append(v_loss_avg)\n",
     "    \n",
     "    print('Epoch [{:5d}/{:5d}] | train loss: {:6.4f} | validation loss: {:6.4f}'.format(\n",
-    "            epoch+1, epochs, t_loss_avg, v_loss_avg))\n",
-    "        "
+    "            epoch+1, epochs, t_loss_avg, v_loss_avg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add learning curve plot\n",
+    "train_loss = np.array(train_loss)\n",
+    "\n",
+    "plt.plot(train_losses, label=\"Training\")\n",
+    "plt.plot(val_losses, label=\"Validation\")\n",
+    "plt.title(\"Training Loss\")\n",
+    "plt.legend()"
    ]
   },
   {
@@ -367,11 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn"
+    "def cuda_to_numpy(tensor):\n",
+    "    \"\"\"Converts a cuda tensor to a numpy array in place\n",
+    "    Positional argument:\n",
+    "        tensor -- Tensor to convert to numpy array \n",
+    "    \"\"\"\n",
+    "    if tensor.requires_grad:\n",
+    "        return tensor.detach().cpu().numpy()\n",
+    "    else:\n",
+    "        return tensor.cpu().numpy()"
    ]
   },
   {
@@ -380,11 +359,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cuda_to_numpy(tensor):\n",
-    "    if tensor.requires_grad:\n",
-    "        return tensor.detach().cpu().numpy()\n",
-    "    else:\n",
-    "        return tensor.cpu().numpy()"
+    "def test_model(model, testloader, device=\"cpu\"):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "        model -- Model to validate with validation data \n",
+    "        testloader -- DataLoader with labels and data\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    from sklearn.metrics import classification_report\n",
+    "    from sklearn.metrics import accuracy_score\n",
+    "    from sklearn.metrics import roc_auc_score\n",
+    "    \n",
+    "    y_pred = np.array([])\n",
+    "    y_true = np.array([])\n",
+    "    y_probs = np.array([])\n",
+    "    \n",
+    "    for batch, labels in testloader:\n",
+    "        batch, labels = batch.to(device), labels.to(device)\n",
+    "        # forward pass\n",
+    "        log_probs = model.forward(batch.unsqueeze(1))\n",
+    "        # Calculate class labels\n",
+    "        probs = torch.exp(log_probs)\n",
+    "        top_p, top_class = probs.topk(1, dim=1)\n",
+    "        \n",
+    "        y_pred = np.append(y_pred, cuda_to_numpy(top_class))\n",
+    "        y_true = np.append(y_true, cuda_to_numpy(labels))\n",
+    "        y_probs = np.append(y_probs, cuda_to_numpy(top_p))\n",
+    "        \n",
+    "    target_names = [\"p_wave\", \"noise\"]\n",
+    "    print(classification_report(y_true, y_pred, target_names=target_names))\n",
+    "    print(\"Accuracy: {}%\".format(accuracy_score(y_true, y_pred) * 100))\n",
+    "    print(\"AUC-ROC Score: {}\".format(roc_auc_score(y_true, y_probs)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "test_model(model, testloader, device=\"cuda\")"
    ]
   },
   {
@@ -396,6 +413,13 @@
     "1. https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2017JB015251\n",
     "2. http://scedc.caltech.edu/research-tools/deeplearning.html#picking_polarity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
