Move testing to test.py

--- a/notebooks/P-Wave-CNN.ipynb
+++ b/notebooks/P-Wave-CNN.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Import Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -14,14 +21,18 @@
     "\n",
     "import numpy as np\n",
     "import sklearn\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import h5py\n",
+    "from lib.test import *\n",
+    "\n",
+    "import mlflow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Defining the CNN architecture"
+    "# 1. Define the CNN architecture"
    ]
   },
   {
@@ -48,7 +59,7 @@
     "        \n",
     "        self.maxpool = nn.MaxPool1d(kernel_size=2, stride=2)        \n",
     "    def forward(self, x):\n",
-    "        x = self.conv1(x)\n",
+    "        x = self.conv1(x.unsqueeze(1))\n",
     "        x = F.relu(self.batchnorm32(x))\n",
     "        x = self.maxpool(x)\n",
     "        \n",
@@ -77,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Loading the Data"
+    "# 2. Load the Data"
    ]
   },
   {
@@ -122,11 +133,11 @@
     "\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "batch_size = 250\n",
+    "batch_size = 500\n",
     "\n",
-    "train_size = 1 * 10 ** 6\n",
+    "train_size = 1 * 10 ** 7\n",
     "train_ratio = 0.7\n",
-    "test_size = 1 * 10 ** 5\n",
+    "test_size = 1 * 10 ** 6\n",
     "\n",
     "# Load test data\n",
     "train_val_data = mixdata[\"X\"][:train_size]\n",
@@ -269,7 +280,7 @@
     "        # Clear gradients in optimizer\n",
     "        optimizer.zero_grad()\n",
     "        # Forward pass\n",
-    "        output = model.forward(batch.unsqueeze(1))\n",
+    "        output = model.forward(batch)\n",
     "        # Calculate loss\n",
     "        loss = criterion(output, labels.type(torch.cuda.LongTensor).view(labels.shape, 1))\n",
     "        train_loss += loss.item()\n",
@@ -288,7 +299,7 @@
     "                # ============================================\n",
     "                batch, labels = batch.to(device), labels.to(device)\n",
     "                # Forward pass\n",
-    "                ouput = model.forward(batch.unsqueeze(1))\n",
+    "                ouput = model.forward(batch)\n",
     "                # Calculate loss\n",
     "                loss = criterion(output, labels.type(torch.cuda.LongTensor).view(labels.shape, 1))\n",
     "                val_loss += loss.item()\n",
@@ -342,66 +353,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cuda_to_numpy(tensor):\n",
-    "    \"\"\"Converts a cuda tensor to a numpy array in place\n",
-    "    Positional argument:\n",
-    "        tensor -- Tensor to convert to numpy array \n",
-    "    \"\"\"\n",
-    "    if tensor.requires_grad:\n",
-    "        return tensor.detach().cpu().numpy()\n",
-    "    else:\n",
-    "        return tensor.cpu().numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_model(model, testloader, device=\"cpu\"):\n",
-    "    \"\"\"\n",
-    "    Arguments:\n",
-    "        model -- Model to validate with validation data \n",
-    "        testloader -- DataLoader with labels and data\n",
-    "    Returns:\n",
-    "        None\n",
-    "    \"\"\"\n",
-    "    from sklearn.metrics import classification_report\n",
-    "    from sklearn.metrics import accuracy_score\n",
-    "    from sklearn.metrics import roc_auc_score\n",
-    "    \n",
-    "    y_pred = np.array([])\n",
-    "    y_true = np.array([])\n",
-    "    y_probs = np.array([])\n",
-    "    \n",
-    "    for batch, labels in testloader:\n",
-    "        batch, labels = batch.to(device), labels.to(device)\n",
-    "        # forward pass\n",
-    "        log_probs = model.forward(batch.unsqueeze(1))\n",
-    "        # Calculate class labels\n",
-    "        probs = torch.exp(log_probs)\n",
-    "        top_p, top_class = probs.topk(1, dim=1)\n",
-    "        \n",
-    "        y_pred = np.append(y_pred, cuda_to_numpy(top_class))\n",
-    "        y_true = np.append(y_true, cuda_to_numpy(labels))\n",
-    "        y_probs = np.append(y_probs, cuda_to_numpy(top_p))\n",
-    "        \n",
-    "    target_names = [\"p_wave\", \"noise\"]\n",
-    "    print(classification_report(y_true, y_pred, target_names=target_names))\n",
-    "    print(\"Accuracy: {}%\".format(accuracy_score(y_true, y_pred) * 100))\n",
-    "    print(\"AUC-ROC Score: {}\".format(roc_auc_score(y_true, y_probs)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "\n",
-    "test_model(model, testloader, device=\"cuda\")"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "test_path = \"../test/scsn_p_2000_2017_6sec_0.5r_pick_test_mix.hdf5\"\n",
+    "\n",
+    "y_true, y_pred, y_probs = test_model(model, test_path, test_size, device=\"cuda\")\n",
+    "\n",
+    "print(classification_report(y_true, y_pred))\n",
+    "print(accuracy_score(y_true, y_pred))\n",
+    "print(roc_auc_score(y_true, y_probs))"
    ]
   },
   {
@@ -413,13 +377,6 @@
     "1. https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2017JB015251\n",
     "2. http://scedc.caltech.edu/research-tools/deeplearning.html#picking_polarity"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
